@@ -1,3 +1,5 @@
+* 2018-09-12 : release 2.13, RECOMMENDS/SUPPLEMENTS rpm tag
+* 2018-07-20 : release 2.12, Handle Requires(pre,post,preun,postun)
 * 2013-11-22 : release 2.11, option install
 * 2013-08-01 : release 2.10, patch for pretrans/postrans, DISTTAG
 * 2013-01-18 : release 2.9, fix to work with rpm 4.10 (Fedora 18)
